--- a/chat.html
+++ b/chat.html
@@ -2,110 +2,167 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Send Meme to Memepedia Discord</title>
-  <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
+  <title>Memepedia - Send Meme</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background-color: #000000;
-      color: #ffffff;
+      font-family: Arial, sans-serif;
+      background-color: #f6f6f6;
       margin: 0;
       padding: 0;
-      text-align: center;
-    }
-    header {
-      background-color: #cc5500;
-      color: #ffffff;
-      padding: 20px 0;
-    }
-    main {
-      padding: 30px;
-    }
-    form {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 20px;
-      max-width: 500px;
-      margin: 0 auto;
-      background-color: #111111;
-      padding: 30px;
-      border-radius: 10px;
+      min-height: 100vh;
     }
-    textarea {
+
+    header {
+      background-color: #4CAF50;
       width: 100%;
-      height: 150px;
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-      resize: vertical;
-      background-color: #222222;
+      padding: 1rem;
+      text-align: center;
       color: white;
+      font-size: 2rem;
     }
-    .button {
-      background-color: #cc5500;
+
+    main {
+      flex: 1;
+      padding: 2rem;
+      width: 100%;
+      max-width: 800px;
+      box-sizing: border-box;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      margin-bottom: 2rem;
+    }
+
+    input[type="text"], textarea {
+      padding: 0.8rem;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      width: 100%;
+    }
+
+    button {
+      padding: 0.8rem;
+      font-size: 1rem;
+      background-color: #4CAF50;
       color: white;
-      padding: 15px 25px;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 16px;
-      transition: background-color 0.3s;
       border: none;
+      border-radius: 5px;
       cursor: pointer;
     }
-    .button:hover {
-      background-color: #b34700;
+
+    button:hover {
+      background-color: #45a049;
     }
-    footer {
-      background-color: #111;
-      color: #aaaaaa;
-      padding: 15px 0;
-      font-size: 14px;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
+
+    #status {
+      font-size: 1rem;
+      color: gray;
+    }
+
+    #recentMessages {
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    #recentMessages h3 {
+      margin-top: 0;
+    }
+
+    .message {
+      padding: 0.5rem 0;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .message:last-child {
+      border-bottom: none;
     }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>Send Your Meme Message</h1>
+  Memepedia - Send a Meme
 </header>
 
 <main>
-  <form id="memeForm">
-    <textarea id="message" placeholder="Type your meme message here..." required></textarea>
-    <button class="button" type="submit">Send to Memepedia Discord</button>
+
+  <form id="sendForm">
+    <textarea id="content" placeholder="Type your meme text here..." required></textarea>
+    <button type="submit">Send Meme</button>
+    <p id="status"></p>
   </form>
+
+  <div id="recentMessages">
+    <h3>Last 5 Messages</h3>
+    <div id="messagesList">
+      <!-- Messages will load here -->
+    </div>
+  </div>
+
 </main>
 
-<footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
-</footer>
-
 <script>
-  document.getElementById('memeForm').addEventListener('submit', async function(e) {
+  document.getElementById("sendForm").addEventListener("submit", async (e) => {
     e.preventDefault();
-    const message = document.getElementById('message').value;
 
-    const response = await fetch('https://memepedia-backend.vercel.app/api/send-to-discord', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({ content: message })
-    });
+    const content = document.getElementById("content").value;
+    document.getElementById("status").textContent = "Sending...";
 
-    if (response.ok) {
-      alert('Meme sent successfully!');
-      document.getElementById('memeForm').reset();
-    } else {
-      alert('Failed to send meme. Please try again later.');
+    try {
+      const response = await fetch("https://memepedia-backend.vercel.app/api/send-to-discord", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({ content }),
+      });
+
+      if (response.ok) {
+        document.getElementById("content").value = ""; // Clear the form
+        document.getElementById("status").textContent = "";
+      } else {
+        document.getElementById("status").textContent = "Failed to send meme.";
+      }
+    } catch (error) {
+      document.getElementById("status").textContent = "Error sending meme.";
     }
   });
+
+  async function fetchMessages() {
+    try {
+      const response = await fetch('https://memepedia-backend.vercel.app/api/get-discord-messages');
+      const messages = await response.json();
+
+      const messagesList = document.getElementById('messagesList');
+      messagesList.innerHTML = '';
+
+      messages.forEach(msg => {
+        const messageDiv = document.createElement('div');
+        messageDiv.className = 'message';
+        messageDiv.innerHTML = `<strong>${msg.author}:</strong> ${msg.content}`;
+        messagesList.appendChild(messageDiv);
+      });
+    } catch (error) {
+      console.error('Error fetching messages:', error);
+    }
+  }
+
+  // Refresh messages every 2 seconds
+  setInterval(fetchMessages, 2000);
+  fetchMessages(); // Fetch immediately on page load too
 </script>
 
 </body>
