--- a/chat.html
+++ b/chat.html
@@ -2,167 +2,151 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Memepedia - Send Meme</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Send a Meme - Memepedia: Rebirth</title>
+  <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f6f6f6;
+      font-family: 'Arial', sans-serif;
+      background-color: #000000;
+      color: #ffffff;
       margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
+      padding: 20px;
+      text-align: center;
     }
 
     header {
-      background-color: #4CAF50;
-      width: 100%;
-      padding: 1rem;
-      text-align: center;
-      color: white;
-      font-size: 2rem;
+      background-color: #cc5500;
+      padding: 20px 0;
+      margin-bottom: 20px;
     }
 
-    main {
-      flex: 1;
-      padding: 2rem;
-      width: 100%;
-      max-width: 800px;
-      box-sizing: border-box;
+    header h1 {
+      margin: 0;
+      font-size: 32px;
+    }
+
+    .button {
+      display: inline-block;
+      background-color: #cc5500;
+      color: white;
+      padding: 15px 25px;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 16px;
+      transition: background-color 0.3s;
+      margin-top: 10px;
+    }
+
+    .button:hover {
+      background-color: #b34700;
     }
 
     form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      margin-bottom: 2rem;
+      margin-bottom: 30px;
     }
 
-    input[type="text"], textarea {
-      padding: 0.8rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      width: 100%;
-    }
-
-    button {
-      padding: 0.8rem;
-      font-size: 1rem;
-      background-color: #4CAF50;
-      color: white;
+    input[type="text"] {
+      padding: 10px;
+      width: 300px;
+      border-radius: 8px;
       border: none;
-      border-radius: 5px;
-      cursor: pointer;
+      margin-right: 10px;
     }
 
-    button:hover {
-      background-color: #45a049;
-    }
-
-    #status {
-      font-size: 1rem;
-      color: gray;
-    }
-
-    #recentMessages {
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-
-    #recentMessages h3 {
-      margin-top: 0;
+    #messages {
+      margin-top: 40px;
+      text-align: center;
     }
 
     .message {
-      padding: 0.5rem 0;
-      border-bottom: 1px solid #ddd;
+      background-color: #222222;
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 8px;
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: left;
     }
 
-    .message:last-child {
-      border-bottom: none;
+    .username {
+      color: #cc5500;
+      font-weight: bold;
+    }
+
+    footer {
+      background-color: #111;
+      color: #aaaaaa;
+      padding: 15px 0;
+      font-size: 14px;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
 
 <header>
-  Memepedia - Send a Meme
+  <h1>Send a Meme</h1>
 </header>
 
-<main>
+<form id="memeForm">
+  <input type="text" id="memeInput" placeholder="Enter your meme text or link..." required>
+  <button type="submit" class="button">Send Meme</button>
+</form>
 
-  <form id="sendForm">
-    <textarea id="content" placeholder="Type your meme text here..." required></textarea>
-    <button type="submit">Send Meme</button>
-    <p id="status"></p>
-  </form>
-
-  <div id="recentMessages">
-    <h3>Last 5 Messages</h3>
-    <div id="messagesList">
-      <!-- Messages will load here -->
-    </div>
+<div id="messages">
+  <h2>Last 5 Memes Sent</h2>
+  <div id="messageList">
+    <!-- Messages will appear here -->
   </div>
+</div>
 
-</main>
+<footer>
+  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
+</footer>
 
 <script>
-  document.getElementById("sendForm").addEventListener("submit", async (e) => {
-    e.preventDefault();
+const memeForm = document.getElementById('memeForm');
+const memeInput = document.getElementById('memeInput');
+const messageList = document.getElementById('messageList');
 
-    const content = document.getElementById("content").value;
-    document.getElementById("status").textContent = "Sending...";
+memeForm.addEventListener('submit', async (e) => {
+  e.preventDefault();
+  const content = memeInput.value.trim();
+  if (!content) return;
 
-    try {
-      const response = await fetch("https://memepedia-backend.vercel.app/api/send-to-discord", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({ content }),
-      });
-
-      if (response.ok) {
-        document.getElementById("content").value = ""; // Clear the form
-        document.getElementById("status").textContent = "";
-      } else {
-        document.getElementById("status").textContent = "Failed to send meme.";
-      }
-    } catch (error) {
-      document.getElementById("status").textContent = "Error sending meme.";
-    }
-  });
-
-  async function fetchMessages() {
-    try {
-      const response = await fetch('https://memepedia-backend.vercel.app/api/get-discord-messages');
-      const messages = await response.json();
-
-      const messagesList = document.getElementById('messagesList');
-      messagesList.innerHTML = '';
-
-      messages.forEach(msg => {
-        const messageDiv = document.createElement('div');
-        messageDiv.className = 'message';
-        messageDiv.innerHTML = `<strong>${msg.author}:</strong> ${msg.content}`;
-        messagesList.appendChild(messageDiv);
-      });
-    } catch (error) {
-      console.error('Error fetching messages:', error);
-    }
+  try {
+    await fetch('https://memepedia-backend.vercel.app/api/send-to-discord', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ content })
+    });
+    memeInput.value = '';
+  } catch (error) {
+    console.error('Error sending meme:', error);
   }
+});
 
-  // Refresh messages every 2 seconds
-  setInterval(fetchMessages, 2000);
-  fetchMessages(); // Fetch immediately on page load too
+async function fetchMessages() {
+  try {
+    const res = await fetch('https://memepedia-backend.vercel.app/api/get-latest-messages');
+    const messages = await res.json();
+
+    messageList.innerHTML = '';
+    messages.forEach(msg => {
+      const div = document.createElement('div');
+      div.className = 'message';
+      div.innerHTML = `<span class="username">${msg.author.username}:</span> ${msg.content}`;
+      messageList.appendChild(div);
+    });
+  } catch (error) {
+    console.error('Error fetching messages:', error);
+  }
+}
+
+setInterval(fetchMessages, 2000); // Refresh every 2 seconds
+fetchMessages(); // Initial load
 </script>
 
 </body>
