--- a/chat.html
+++ b/chat.html
@@ -1,153 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Send a Meme - Memepedia: Rebirth</title>
-  <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Memepedia Chat</title>
   <style>
     body {
+      background-color: #1a1a1a;
+      color: #f0f0f0;
       font-family: 'Arial', sans-serif;
-      background-color: #000000;
-      color: #ffffff;
       margin: 0;
-      padding: 20px;
-      text-align: center;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     header {
-      background-color: #cc5500;
-      padding: 20px 0;
-      margin-bottom: 20px;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 32px;
-    }
-
-    .button {
-      display: inline-block;
-      background-color: #cc5500;
-      color: white;
-      padding: 15px 25px;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 16px;
-      transition: background-color 0.3s;
-      margin-top: 10px;
-    }
-
-    .button:hover {
-      background-color: #b34700;
-    }
-
-    form {
-      margin-bottom: 30px;
-    }
-
-    input[type="text"] {
-      padding: 10px;
-      width: 300px;
-      border-radius: 8px;
-      border: none;
-      margin-right: 10px;
-    }
-
-    #messages {
-      margin-top: 40px;
+      background-color: #2c2c2c;
+      width: 100%;
+      padding: 20px;
       text-align: center;
+      font-size: 2em;
+      font-weight: bold;
+      color: #ffcc00;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.5);
     }
 
-    .message {
-      background-color: #222222;
+    main {
+      margin-top: 30px;
+      width: 90%;
+      max-width: 600px;
+    }
+
+    #message-input {
+      width: 100%;
       padding: 10px;
+      font-size: 1em;
+      border: none;
+      border-radius: 5px;
       margin-bottom: 10px;
-      border-radius: 8px;
-      width: 80%;
-      margin-left: auto;
-      margin-right: auto;
-      text-align: left;
     }
 
-    .username {
-      color: #cc5500;
+    button {
+      width: 100%;
+      padding: 10px;
+      font-size: 1em;
+      background-color: #ffcc00;
+      color: black;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
       font-weight: bold;
     }
 
-    footer {
-      background-color: #111;
-      color: #aaaaaa;
-      padding: 15px 0;
-      font-size: 14px;
-      margin-top: 40px;
+    button:hover {
+      background-color: #e6b800;
+    }
+
+    #latest-messages {
+      margin-top: 20px;
+      background-color: #2b2b2b;
+      padding: 15px;
+      border-radius: 8px;
+    }
+
+    .message {
+      padding: 8px;
+      border-bottom: 1px solid #444;
+    }
+
+    .message:last-child {
+      border-bottom: none;
+    }
+
+    .message strong {
+      color: #ffcc00;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Send a Meme</h1>
-</header>
+  <header>MEMEPEDIA CHAT</header>
 
-<form id="memeForm">
-  <input type="text" id="memeInput" placeholder="Enter your meme text or link..." required>
-  <button type="submit" class="button">Send Meme</button>
-</form>
+  <main>
+    <input id="message-input" placeholder="Type your meme here..." />
+    <button onclick="sendMessage()">Send</button>
 
-<div id="messages">
-  <h2>Last 5 Memes Sent</h2>
-  <div id="messageList">
-    <!-- Messages will appear here -->
-  </div>
-</div>
+    <div id="latest-messages">
+      <p>Loading messages...</p>
+    </div>
+  </main>
 
-<footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
-</footer>
+  <script>
+    async function sendMessage() {
+      const content = document.getElementById('message-input').value.trim();
+      if (!content) return;
 
-<script>
-const memeForm = document.getElementById('memeForm');
-const memeInput = document.getElementById('memeInput');
-const messageList = document.getElementById('messageList');
+      try {
+        const response = await fetch('https://memepedia-backend.vercel.app/api/send-to-discord', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ content })
+        });
 
-memeForm.addEventListener('submit', async (e) => {
-  e.preventDefault();
-  const content = memeInput.value.trim();
-  if (!content) return;
+        if (!response.ok) {
+          console.error('Failed to send message');
+          return;
+        }
 
-  try {
-    await fetch('https://memepedia-backend.vercel.app/api/send-to-discord', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ content })
-    });
-    memeInput.value = '';
-  } catch (error) {
-    console.error('Error sending meme:', error);
-  }
-});
+        document.getElementById('message-input').value = '';
+        fetchMessages(); // Refresh after sending
+      } catch (error) {
+        console.error('Error sending message:', error);
+      }
+    }
 
-async function fetchMessages() {
-  try {
-    const res = await fetch('https://memepedia-backend.vercel.app/api/get-latest-messages');
-    const messages = await res.json();
+    async function fetchMessages() {
+      try {
+        const res = await fetch('https://memepedia-backend.vercel.app/api/get-latest-messages');
+        const data = await res.json();
 
-    messageList.innerHTML = '';
-    messages.forEach(msg => {
-      const div = document.createElement('div');
-      div.className = 'message';
-      div.innerHTML = `<span class="username">${msg.author.username}:</span> ${msg.content}`;
-      messageList.appendChild(div);
-    });
-  } catch (error) {
-    console.error('Error fetching messages:', error);
-  }
-}
+        if (!Array.isArray(data)) {
+          console.error("Expected array of messages, got:", data);
+          return;
+        }
 
-setInterval(fetchMessages, 2000); // Refresh every 2 seconds
-fetchMessages(); // Initial load
-</script>
+        const container = document.getElementById('latest-messages');
+        container.innerHTML = '';
+
+        data.forEach(msg => {
+          const div = document.createElement('div');
+          div.className = 'message';
+          div.innerHTML = `<strong>${msg.author.username}</strong>: ${msg.content}`;
+          container.appendChild(div);
+        });
+      } catch (err) {
+        console.error('Error fetching messages:', err);
+      }
+    }
+
+    fetchMessages();
+    setInterval(fetchMessages, 2000);
+  </script>
 
 </body>
 </html>
