--- a/chat.html
+++ b/chat.html
@@ -1,146 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Memepedia Chat</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chat with Memepedia</title>
+  <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
   <style>
     body {
-      background-color: #121212;
-      color: white;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Arial', sans-serif;
+      background-color: #000000;
+      color: #ffffff;
       margin: 0;
       padding: 0;
-    }
-
-    header {
-      background-color: #202020;
-      padding: 20px;
       text-align: center;
-      font-size: 2em;
-      font-weight: bold;
-      color: #00ffcc;
-      border-bottom: 2px solid #00ffcc;
     }
-
-    main {
-      max-width: 800px;
-      margin: 30px auto;
-      padding: 20px;
-      background-color: #1e1e1e;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #000;
+    header {
+      background-color: #cc5500;
+      color: #ffffff;
+      padding: 20px 0;
     }
-
-    #message-input {
-      width: 100%;
-      padding: 12px;
-      font-size: 1em;
-      border-radius: 5px;
-      border: none;
+    header img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
       margin-bottom: 10px;
     }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      font-size: 1em;
-      background-color: #00ffcc;
-      color: #000;
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
+    main {
+      padding: 30px;
     }
-
-    button:hover {
-      background-color: #00d6ad;
-    }
-
-    #latest-messages {
-      margin-top: 25px;
-      background-color: #2a2a2a;
-      padding: 15px;
+    .button {
+      display: inline-block;
+      background-color: #cc5500;
+      color: white;
+      padding: 15px 25px;
+      text-decoration: none;
       border-radius: 8px;
+      font-size: 16px;
+      transition: background-color 0.3s;
     }
-
+    .button:hover {
+      background-color: #b34700;
+    }
+    .messages-container {
+      margin: 30px 0;
+      padding: 20px;
+      background-color: #222222;
+      border-radius: 8px;
+      max-height: 400px;
+      overflow-y: auto;
+    }
     .message {
+      background-color: #444444;
+      border-radius: 8px;
+      margin-bottom: 10px;
       padding: 10px;
-      border-bottom: 1px solid #444;
     }
-
-    .message:last-child {
-      border-bottom: none;
+    .message .author {
+      color: #cc5500;
+      font-weight: bold;
     }
-
-    .message strong {
-      color: #00ffcc;
+    footer {
+      background-color: #111;
+      color: #aaaaaa;
+      padding: 15px 0;
+      font-size: 14px;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
     }
   </style>
 </head>
 <body>
 
-  <header>🗨️ Memepedia Chat Room</header>
+<header>
+  <h1>Memepedia Chat</h1>
+  <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Logo">
+</header>
 
-  <main>
-    <input id="message-input" placeholder="Type your meme message..." />
-    <button onclick="sendMessage()">Send</button>
+<main>
+  <div class="messages-container" id="messagesContainer">
+    <!-- Messages will be appended here -->
+  </div>
 
-    <div id="latest-messages">
-      <p>Loading messages...</p>
-    </div>
-  </main>
+  <input type="text" id="memeInput" placeholder="Type your meme here..." style="padding: 10px; width: 80%; margin-top: 20px; border-radius: 8px;">
+  <button id="sendMeme" class="button" style="margin-top: 10px;">Send Meme</button>
+</main>
 
-  <script>
-    async function sendMessage() {
-      const content = document.getElementById('message-input').value.trim();
-      if (!content) return;
+<footer>
+  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
+</footer>
 
+<script>
+  // Fetch messages every 2 seconds to keep them live
+  async function fetchMessages() {
+    try {
+      const response = await fetch('https://memepedia-backend.vercel.app/api/get-latest-messages');
+      const messages = await response.json();
+
+      const messagesContainer = document.getElementById('messagesContainer');
+      messagesContainer.innerHTML = ''; // Clear the messages
+
+      // Display the last 5 messages
+      messages.forEach(msg => {
+        const messageDiv = document.createElement('div');
+        messageDiv.className = 'message';
+        messageDiv.innerHTML = `<span class="author">${msg.author}</span>: ${msg.content}`;
+        messagesContainer.appendChild(messageDiv);
+      });
+    } catch (error) {
+      console.error('Error fetching messages:', error);
+    }
+  }
+
+  // Fetch messages on page load and then every 2 seconds
+  fetchMessages();
+  setInterval(fetchMessages, 2000);
+
+  // Send a meme message
+  document.getElementById('sendMeme').addEventListener('click', async () => {
+    const memeInput = document.getElementById('memeInput');
+    const memeContent = memeInput.value.trim();
+
+    if (memeContent) {
       try {
-        await fetch('https://memepedia-backend.vercel.app/api/send-to-discord', {
+        const response = await fetch('https://memepedia-backend.vercel.app/api/send-to-discord', {
           method: 'POST',
           headers: {
-            'Content-Type': 'application/json'
+            'Content-Type': 'application/json',
           },
-          body: JSON.stringify({ content })
+          body: JSON.stringify({ content: memeContent }),
         });
 
-        document.getElementById('message-input').value = '';
-        fetchMessages(); // Refresh messages
-      } catch (error) {
-        console.error('Error sending message:', error);
-      }
-    }
-
-    async function fetchMessages() {
-      try {
-        const res = await fetch('https://memepedia-backend.vercel.app/api/get-latest-messages');
-        const data = await res.json();
-
-        if (!Array.isArray(data)) {
-          console.error("Expected array of messages, got:", data);
-          document.getElementById('latest-messages').innerHTML = `<p>Error: Unable to load messages.</p>`;
-          return;
+        if (response.ok) {
+          memeInput.value = ''; // Clear the input field
+        } else {
+          console.error('Failed to send meme');
         }
-
-        const container = document.getElementById('latest-messages');
-        container.innerHTML = '';
-
-        data.forEach(msg => {
-          const div = document.createElement('div');
-          div.className = 'message';
-          div.innerHTML = `<strong>${msg.author.username}</strong>: ${msg.content}`;
-          container.appendChild(div);
-        });
-      } catch (err) {
-        console.error('Error fetching messages:', err);
-        document.getElementById('latest-messages').innerHTML = `<p>Error: Unable to load messages.</p>`;
+      } catch (error) {
+        console.error('Error sending meme:', error);
       }
     }
-
-    fetchMessages();
-    setInterval(fetchMessages, 2000);
-  </script>
+  });
+</script>
 
 </body>
 </html>
