--- a/chat.html
+++ b/chat.html
@@ -1,147 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chat with Memepedia</title>
-  <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #000000;
-      color: #ffffff;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    header {
-      background-color: #cc5500;
-      color: #ffffff;
-      padding: 20px 0;
-    }
-    header img {
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      margin-bottom: 10px;
-    }
-    main {
-      padding: 30px;
-    }
-    .button {
-      display: inline-block;
-      background-color: #cc5500;
-      color: white;
-      padding: 15px 25px;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 16px;
-      transition: background-color 0.3s;
-    }
-    .button:hover {
-      background-color: #b34700;
-    }
-    .messages-container {
-      margin: 30px 0;
-      padding: 20px;
-      background-color: #222222;
-      border-radius: 8px;
-      max-height: 400px;
-      overflow-y: auto;
-    }
-    .message {
-      background-color: #444444;
-      border-radius: 8px;
-      margin-bottom: 10px;
-      padding: 10px;
-    }
-    .message .author {
-      color: #cc5500;
-      font-weight: bold;
-    }
-    footer {
-      background-color: #111;
-      color: #aaaaaa;
-      padding: 15px 0;
-      font-size: 14px;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-    }
-  </style>
-</head>
-<body>
-
-<header>
-  <h1>Memepedia Chat</h1>
-  <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Logo">
-</header>
-
-<main>
-  <div class="messages-container" id="messagesContainer">
-    <!-- Messages will be appended here -->
-  </div>
-
-  <input type="text" id="memeInput" placeholder="Type your meme here..." style="padding: 10px; width: 80%; margin-top: 20px; border-radius: 8px;">
-  <button id="sendMeme" class="button" style="margin-top: 10px;">Send Meme</button>
-</main>
-
-<footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
-</footer>
-
-<script>
-  // Fetch messages every 2 seconds to keep them live
-  async function fetchMessages() {
-    try {
-      const response = await fetch('https://memepedia-backend.vercel.app/api/get-latest-messages');
-      const messages = await response.json();
-
-      const messagesContainer = document.getElementById('messagesContainer');
-      messagesContainer.innerHTML = ''; // Clear the messages
-
-      // Display the last 5 messages
-      messages.forEach(msg => {
-        const messageDiv = document.createElement('div');
-        messageDiv.className = 'message';
-        messageDiv.innerHTML = `<span class="author">${msg.author}</span>: ${msg.content}`;
-        messagesContainer.appendChild(messageDiv);
-      });
-    } catch (error) {
-      console.error('Error fetching messages:', error);
-    }
+<style>
+  body {
+    font-family: 'Arial', sans-serif;
+    background-color: #000000;
+    color: #ffffff;
+    margin: 0;
+    padding: 0;
+    text-align: center;
   }
 
-  // Fetch messages on page load and then every 2 seconds
-  fetchMessages();
-  setInterval(fetchMessages, 2000);
+  header {
+    background-color: #cc5500;
+    color: #ffffff;
+    padding: 20px 0;
+  }
 
-  // Send a meme message
-  document.getElementById('sendMeme').addEventListener('click', async () => {
-    const memeInput = document.getElementById('memeInput');
-    const memeContent = memeInput.value.trim();
+  header img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+  }
 
-    if (memeContent) {
-      try {
-        const response = await fetch('https://memepedia-backend.vercel.app/api/send-to-discord', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify({ content: memeContent }),
-        });
+  main {
+    padding: 30px;
+  }
 
-        if (response.ok) {
-          memeInput.value = ''; // Clear the input field
-        } else {
-          console.error('Failed to send meme');
-        }
-      } catch (error) {
-        console.error('Error sending meme:', error);
-      }
-    }
-  });
-</script>
+  .button {
+    display: inline-block;
+    background-color: #cc5500;
+    color: white;
+    padding: 15px 25px;
+    text-decoration: none;
+    border-radius: 8px;
+    font-size: 16px;
+    transition: background-color 0.3s;
+  }
 
-</body>
-</html>
+  .button:hover {
+    background-color: #b34700;
+  }
+
+  .messages-container {
+    margin: 30px auto;
+    padding: 20px;
+    background-color: #222222;
+    border-radius: 8px;
+    max-height: 400px;
+    overflow-y: auto;
+    width: 80%; /* Adjust the width to make it fit inside the container */
+    box-sizing: border-box; /* Ensure padding is included in the width */
+  }
+
+  .message {
+    background-color: #444444;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    padding: 10px;
+  }
+
+  .message .author {
+    color: #cc5500;
+    font-weight: bold;
+  }
+
+  footer {
+    background-color: #111;
+    color: #aaaaaa;
+    padding: 15px 0;
+    font-size: 14px;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+  }
+</style>
