--- a/chatbot.html
+++ b/chatbot.html
@@ -3,136 +3,103 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Memepedia AI Chatbot</title>
+  <title>MEMEPEDIA AI Chatbot</title>
   <style>
     body {
-      background-color: #1e1e1e;
-      font-family: Arial, sans-serif;
+      background-color: #121212;
       color: white;
-      margin: 0;
-      padding: 0;
-    }
-
-    .container {
-      max-width: 700px;
-      margin: 30px auto;
-      background-color: #2c2c2c;
-      border-radius: 8px;
+      font-family: 'Arial', sans-serif;
       padding: 20px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
-
     h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #ffd700;
+      color: #00ffcc;
     }
-
-    .chat-box {
-      background-color: #1a1a1a;
-      border-radius: 6px;
+    #chat {
+      border: 2px solid #00ffcc;
       padding: 10px;
-      height: 400px;
-      overflow-y: auto;
-      border: 1px solid #444;
-      margin-bottom: 10px;
+      border-radius: 10px;
+      max-width: 600px;
+      margin: auto;
+      background-color: #1e1e1e;
     }
-
     .message {
       margin-bottom: 10px;
-      line-height: 1.4;
     }
-
     .user {
-      color: #00afff;
+      color: #00bfff;
     }
-
     .bot {
       color: #90ee90;
     }
-
-    .input-area {
-      display: flex;
-      gap: 10px;
-    }
-
-    input[type="text"] {
-      flex: 1;
+    input, button {
       padding: 10px;
-      border-radius: 4px;
-      border: none;
       font-size: 16px;
+      margin-top: 10px;
     }
-
-    button {
-      padding: 10px 15px;
-      font-size: 16px;
-      background-color: #444;
-      color: white;
+    input {
+      width: 80%;
+      background-color: #333;
       border: none;
-      border-radius: 4px;
+      color: white;
+    }
+    button {
+      background-color: #00ffcc;
+      color: black;
+      border: none;
       cursor: pointer;
     }
-
     button:hover {
-      background-color: #666;
+      background-color: #00cc99;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Memepedia AI Chatbot</h1>
-    <div id="chatBox" class="chat-box"></div>
-    <div class="input-area">
-      <input type="text" id="userInput" placeholder="Type your message..." />
-      <button onclick="sendMessage()">Send</button>
-    </div>
-  </div>
+  <h1>MEMEPEDIA AI Chatbot</h1>
+  <div id="chat"></div>
+  <input type="text" id="userInput" placeholder="Say something..." />
+  <button onclick="sendMessage()">Send</button>
 
   <script>
-    const chatBox = document.getElementById("chatBox");
-    const userInput = document.getElementById("userInput");
+    const chatDiv = document.getElementById("chat");
+
+    function addMessage(text, sender) {
+      const messageDiv = document.createElement("div");
+      messageDiv.className = `message ${sender}`;
+      messageDiv.textContent = `${sender === "user" ? "You" : "Gemini"}: ${text}`;
+      chatDiv.appendChild(messageDiv);
+      chatDiv.scrollTop = chatDiv.scrollHeight;
+    }
 
     async function sendMessage() {
-      const input = userInput.value.trim();
-      if (!input) return;
+      const input = document.getElementById("userInput");
+      const message = input.value.trim();
+      if (!message) return;
 
-      appendMessage("You", input, "user");
-      userInput.value = "";
+      addMessage(message, "user");
+      input.value = "";
 
       try {
-        const res = await fetch("https://memepedia-backend.vercel.app/api/gemini-chat", {
+        const response = await fetch("https://memepedia-backend.vercel.app/api/gemini-chat", {
           method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ prompt: input })
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({ message })
         });
 
-        if (!res.ok) throw new Error("Failed to get response from Gemini");
+        const data = await response.json();
 
-        const data = await res.json();
-        const response = data.response || "No response";
-
-        appendMessage("Gemini", response, "bot");
+        if (!response.ok) {
+          addMessage(`Error: ${data.error}`, "bot");
+        } else {
+          const botReply = data.candidates?.[0]?.content?.parts?.[0]?.text || "No response from Gemini.";
+          addMessage(botReply, "bot");
+        }
       } catch (err) {
+        addMessage("Error: Something went wrong. Try again later.", "bot");
         console.error(err);
-        appendMessage("Error", "Something went wrong. Try again later.", "bot");
       }
     }
-
-    function appendMessage(sender, text, className) {
-      const div = document.createElement("div");
-      div.className = `message ${className}`;
-      div.innerHTML = `<strong>${sender}:</strong> ${text}`;
-      chatBox.appendChild(div);
-      chatBox.scrollTop = chatBox.scrollHeight;
-    }
-
-    // Send message on Enter key
-    userInput.addEventListener("keypress", function(e) {
-      if (e.key === "Enter") {
-        sendMessage();
-      }
-    });
   </script>
 </body>
 </html>
